[gd_scene load_steps=39 format=3 uid="uid://cbewpi4tdjfwa"]

[ext_resource type="Script" path="res://Scripts/turn_based_battle2.gd" id="1_60fx2"]
[ext_resource type="Texture2D" uid="uid://dfdsehq6xkp1n" path="res://Assets/Sprites/warmario-walk.png" id="2_1a0b8"]
[ext_resource type="Texture2D" uid="uid://dlcdayvx4r7e5" path="res://Assets/Sprites/missle.png" id="4_lteal"]
[ext_resource type="Texture2D" uid="uid://c5l8tys70j5dr" path="res://Assets/Sprites/mario-back.png" id="4_pq4m4"]
[ext_resource type="AudioStream" uid="uid://bggcnmq7pbdpx" path="res://Assets/Sounds/rocketlaunch.wav" id="5_3ypuj"]
[ext_resource type="Texture2D" uid="uid://dw8dxyfkf5bpu" path="res://Assets/Sprites/rpg.png" id="5_hvd4g"]
[ext_resource type="AudioStream" uid="uid://cck60a8svitdi" path="res://Assets/Sounds/button-pressed.wav" id="6_kjmaa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ebp7d"]
bg_color = Color(0.905882, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p2eme"]
bg_color = Color(0, 0.921569, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_23bpu"]
atlas = ExtResource("2_1a0b8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgoxh"]
atlas = ExtResource("2_1a0b8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i4xc"]
atlas = ExtResource("2_1a0b8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kuj"]
atlas = ExtResource("2_1a0b8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6xff"]
atlas = ExtResource("2_1a0b8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppet5"]
atlas = ExtResource("2_1a0b8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg0pa"]
atlas = ExtResource("2_1a0b8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ems85"]
atlas = ExtResource("2_1a0b8")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ooc"]
atlas = ExtResource("2_1a0b8")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w06uw"]
atlas = ExtResource("2_1a0b8")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihu6v"]
atlas = ExtResource("2_1a0b8")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7p1n"]
atlas = ExtResource("2_1a0b8")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7tdpj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23bpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgoxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i4xc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6xff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppet5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg0pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ems85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ooc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w06uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihu6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7p1n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_1ofbx"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-350, 113), Vector2(146.5, 113)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0c1ld"]
_data = {
"slide": SubResource("Animation_1ofbx")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8fiq"]
bg_color = Color(0, 0, 0, 0.870588)

[sub_resource type="Animation" id="Animation_k1d2w"]
resource_name = "fly"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(353, 382), Vector2(534, 266)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(12, 12), Vector2(4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dbfe8"]
_data = {
"fly": SubResource("Animation_k1d2w")
}

[sub_resource type="Animation" id="Animation_0yvnl"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(900, 412), Vector2(247, 412)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xpqv"]
_data = {
"slide": SubResource("Animation_0yvnl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybouw"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8616o"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3la16"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jftw"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_i2i4i"]
resource_name = "flashing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rc6fg"]
_data = {
"flashing": SubResource("Animation_i2i4i")
}

[sub_resource type="GDScript" id="GDScript_m6f88"]
script/source = "extends Sprite2D

@onready var transition_sprite = $\".\"
@onready var transitionPlayer = $AnimationPlayer
@onready var camera  = $\"../SceneObjects/CharacterBody2D/Camera2D\"

# Called when the node enters the scene tree for the first time.
func transition():
	var image = get_viewport().get_texture().get_image()
	var texture = ImageTexture.create_from_image(image)
	transition_sprite.texture = texture
	transition_sprite.position = get_center_position()
	transitionPlayer.play(\"slide\")

func get_center_position():
	# Get the camera's position
	var camera_position = camera.global_position

	# Get the size of the viewport
	var viewport_size = get_viewport_rect().size

	# Adjust for camera zoom level
	var zoom_adjusted_viewport_size = viewport_size / camera.get_zoom()

	# Calculate the center of the screen
	var screen_center = zoom_adjusted_viewport_size / 2

	# Offset the object's position relative to the camera and screen center
	var object_position = camera_position + screen_center

	# Set the object's position
	return object_position
"

[sub_resource type="Animation" id="Animation_j24lp"]
resource_name = "slide"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_obq5c"]
_data = {
"slide": SubResource("Animation_j24lp")
}

[node name="Turn Based Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60fx2")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 649.0

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -228.0
offset_right = 163.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ebp7d")
theme_override_styles/fill = SubResource("StyleBoxFlat_p2eme")
step = 1.0
value = 100.0

[node name="Enemy" type="AnimatedSprite2D" parent="EnemyContainer"]
position = Vector2(-350, 113)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_7tdpj")
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyContainer/Enemy"]
libraries = {
"": SubResource("AnimationLibrary_0c1ld")
}
autoplay = "slide"

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -208.0
offset_right = 6.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_m8fiq")

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 412.0
offset_right = -143.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
size_flags_horizontal = 4
text = "Player HP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ebp7d")
theme_override_styles/fill = SubResource("StyleBoxFlat_p2eme")
step = 1.0
value = 100.0

[node name="missle" type="Sprite2D" parent="."]
visible = false
position = Vector2(353, 382)
rotation = 1.22173
scale = Vector2(12, 12)
texture = ExtResource("4_lteal")

[node name="missle_animation" type="AnimationPlayer" parent="missle"]
libraries = {
"": SubResource("AnimationLibrary_dbfe8")
}

[node name="mairo" type="Sprite2D" parent="."]
position = Vector2(247, 412)
scale = Vector2(10, 10)
texture = ExtResource("4_pq4m4")

[node name="rpg" type="Sprite2D" parent="mairo"]
position = Vector2(10, -0.375)
rotation = -0.322886
texture = ExtResource("5_hvd4g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="mairo"]
libraries = {
"": SubResource("AnimationLibrary_5xpqv")
}
autoplay = "slide"

[node name="ActionsPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -112.0
offset_right = 2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_m8fiq")

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Talk" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ybouw")
theme_override_styles/hover = SubResource("StyleBoxFlat_8616o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3la16")
text = "TALK
"

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ybouw")
theme_override_styles/hover = SubResource("StyleBoxFlat_8616o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3la16")
text = "FIRE RPG MISSLE"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ybouw")
theme_override_styles/hover = SubResource("StyleBoxFlat_8616o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3la16")
text = "RUN"

[node name="TextBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_top = 536.0
offset_right = 4.0
offset_bottom = 646.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jftw")

[node name="Label" type="RichTextLabel" parent="TextBox"]
layout_mode = 0
offset_left = 79.0
offset_top = 29.0
offset_right = 1095.0
offset_bottom = 83.0
bbcode_enabled = true
text = "TEXT GOES HERETEXT GOES HERETEXT GOES HERETEXT GOES HERETEXT GOES HERETEXT GOES HERETEXT GOES HERETEXT GOES HERETEXT GOES HERE"
autowrap_mode = 2

[node name="EnemyDamaged" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rc6fg")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.669

[node name="launch_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3ypuj")
volume_db = 21.334

[node name="transition_sprite" type="Sprite2D" parent="."]
script = SubResource("GDScript_m6f88")

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition_sprite"]
libraries = {
"": SubResource("AnimationLibrary_obq5c")
}

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kjmaa")

[connection signal="pressed" from="ActionsPanel/Actions/Talk" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_run_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
